--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
         <service
             android:name=".DialogAccessibility"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
+            android:label="@string/accessibility_label"
+            android:description="@string/accessibility_description"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
@@ -43,7 +45,8 @@
         </service>
         <receiver
             android:name= ".DeviceAdmin"
-            android:label= "@string/app_name"
+            android:label= "@string/admin_label"
+            android:description="@string/admin_description"
             android:permission= "android.permission.BIND_DEVICE_ADMIN"
             android:exported="true">
             <meta-data
