--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'com.akruzen.officer'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.akruzen.officer"
         minSdk 26
-        targetSdk 34
+        targetSdk 35
         versionCode 1
         versionName "Aamba 🥭 - 1.0.0"
 
@@ -33,7 +33,8 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+    implementation 'androidx.activity:activity:1.10.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
