--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
 
 android {
     namespace 'com.akruzen.officer'
-    compileSdk 35
+    compileSdk = 36
 
     defaultConfig {
         applicationId "com.akruzen.officer"
         minSdk 26
-        targetSdk 35
+        targetSdk 36
         versionCode 1
         versionName "Aamba 🥭 - 1.0.0"
 
@@ -33,14 +33,11 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'com.google.android.material:material:1.14.0-alpha08'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
-    implementation 'androidx.activity:activity:1.10.1'
-    implementation platform('com.google.firebase:firebase-bom:34.0.0')
+    implementation 'androidx.activity:activity:1.12.2'
+    implementation platform('com.google.firebase:firebase-bom:34.7.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation("com.google.firebase:firebase-crashlytics-ndk")
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 }
