--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 plugins {
     id 'com.android.application' version '8.13.1' apply false
     id 'com.android.library' version '8.13.1' apply false
-    id 'com.google.gms.google-services' version '4.4.3' apply false
+    id 'com.google.gms.google-services' version '4.4.4' apply false
     id 'com.google.firebase.crashlytics' version '3.0.5' apply false
+    id 'com.google.android.gms.oss-licenses-plugin' version '0.10.10' apply false
 }
