--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.akruzen.officer"
         minSdk 26
         targetSdk 36
-        versionCode 1
-        versionName "Aamba 🥭 - 1.0.0"
+        versionCode 2
+        versionName "Berry 🍓 - 1.1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
